# controller/ProductController.js
@@ -1,11 +1,12 @@
 import Product from '../models/ProductModel.js';
+import { Op } from 'sequelize'; 
 
 const getAllProducts = async (req, res) => {
     try {
-        const userId = req.userId;
+        const id = req.id;
         const products = await Product.findAll({
             where: {
-                userId: userId
+                userId: id
             }
         });
 
@@ -15,18 +16,23 @@ const getAllProducts = async (req, res) => {
     }
 };
 
-const getProductById = async (req, res) => {
+const getProductByName = async (req, res) => {
     try {
-        const userId = req.userId;
+        const userId = req.id;
+        const name = req.params.name;  
         const product = await Product.findOne({
             where: {
-                id: req.params.id,
-                userId: userId
+                userId: userId,
+                name: {
+                    [Op.like]: `%${name}%`
+                }
             }
         });
+
         if (!product) {
             return res.status(404).json({ message: 'Product not found or unauthorized' });
         }
+
         res.status(200).json(product);
     } catch (error) {
         res.status(500).json({ message: error.message });
@@ -34,19 +40,29 @@ const getProductById = async (req, res) => {
 };
 
 const createProduct = async (req, res) => {
-    const { name, image, gradien, category } = req.body;
-    if (!name || !gradien || !category) {
-        return res.status(400).json({ message: 'Name, gradien, and category are required' });
+    const { name, image, protein, sugar, sodium, saturatedFat, calories, fiber, estVegetableContain, grade } = req.body;
+    if (  !name || !grade ||
+        isNaN(protein) || isNaN(sugar) || isNaN(sodium) || 
+        isNaN(saturatedFat) || isNaN(calories) || isNaN(fiber) || 
+        isNaN(estVegetableContain)) {
+        return res.status(400).json({ message: 'Invalid input: ensure all fields are correctly filled' });
     }
 
-    const userId = req.userId;  // Mendapatkan userId dari token
+    const userId = req.id;  // Mendapatkan userId dari token
     try {
         const newProduct = await Product.create({
             name: name,
             image: image,
-            gradien: gradien,
-            category: category,
-            userId: userId,  // UserId otomatis dari token
+            protein: protein,
+            sugar: sugar,
+            sodium: sodium,
+            saturatedFat: saturatedFat,
+            calories: calories,
+            fiber: fiber,
+            estVegetableContain: estVegetableContain,
+            grade: grade,
+
+            userId: userId, // UserId otomatis dari token
         });
         res.status(201).json({
             message: 'Product created successfully',
@@ -58,4 +74,4 @@ const createProduct = async (req, res) => {
     }
 };
 
-export{ getAllProducts, getProductById, createProduct }
+export{ getAllProducts, getProductByName, createProduct }
